@@ -6,6 +6,7 @@ Version 1.3.9+svn:
    * updated translations: Danish, Galician, Polish, Swedish, Valencian
  * multiplayer:
    * revised maps: Silverhead Crossing, Weldyn Channel, Blue Water Province
+   * the server sends a periodical 'ping' to all players to detect ghosts
  * WML engine:
    * new key "contains=" in [variable] conditions to check the presence of a 
      substring in a variable value
